// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopologyView should display an empty topology correctly 1`] = `
<TopologyView
  className="my-test-class"
  id="simple-test-id"
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <div
            className="pf-topology-content"
          />
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;

exports[`TopologyView should display topology correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-context-bar"
          />
        </div>
      </Component>
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-view-bar"
          />
        </div>
      </Component>
      <Component
        className="pf-topology-container"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;

exports[`TopologyView should display topology sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={false}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-context-bar"
          />
        </div>
      </Component>
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-view-bar"
          />
        </div>
      </Component>
      <Component
        className="pf-topology-container pf-topology-container__with-sidebar"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container pf-topology-container__with-sidebar"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
          <div>
            Test SideBar
          </div>
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;

exports[`TopologyView should display topology w/ open sidebar correctly 1`] = `
<TopologyView
  className="my-test-class"
  contextToolbar={
    <div
      id="test-context-bar"
    />
  }
  controlBar={
    <div
      id="test-control-bar"
    />
  }
  id="simple-test-id"
  sideBar={
    <div>
      Test SideBar
    </div>
  }
  sideBarOpen={true}
  viewToolbar={
    <div
      id="test-view-bar"
    />
  }
>
  <Component
    className="my-test-class"
    id="simple-test-id"
  >
    <div
      className="pf-l-stack my-test-class"
      id="simple-test-id"
    >
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-context-bar"
          />
        </div>
      </Component>
      <Component
        isFilled={false}
      >
        <div
          className="pf-l-stack__item"
        >
          <div
            id="test-view-bar"
          />
        </div>
      </Component>
      <Component
        className="pf-topology-container pf-topology-container__with-sidebar pf-topology-container__with-sidebar--open"
        isFilled={true}
      >
        <div
          className="pf-l-stack__item pf-m-fill pf-topology-container pf-topology-container__with-sidebar pf-topology-container__with-sidebar--open"
        >
          <div
            className="pf-topology-content"
          >
            <div
              id="test-canvas"
            />
            <span
              className="pf-topology-control-bar"
            >
              <div
                id="test-control-bar"
              />
            </span>
          </div>
          <div>
            Test SideBar
          </div>
        </div>
      </Component>
    </div>
  </Component>
</TopologyView>
`;
